Updated Slideshow html and changed the button code in exercise1

--- a/SlideShow.html
+++ b/SlideShow.html
@@ -1,20 +1,21 @@
 <html>
   <head>
-      <title> Slide Show :) </title>
+      <title> Welcome to my slide show :) </title>
       <script type="text/javascript"
-            src="SlideShow.js"
-      </script>
-  </head>
+                   src="SlideShow.js">
+           </script>
+  <body>
+  <h1> Hi! Welcome to my slide show :) </h1>
+  <img src="sheentpose.jpg">
+  <img src="sheenimage2.jpeg">
+  <img src="sheen3.jpg">
+  <img src="sheen4.jpg">
+  <img src="sheen5.webp">
+  <img src="sheen6.jpg">
+  <button onclick="validatePassword()">Previous</button>
+  <button onclick="validatePassword()">Next</button>
 
-<body>
-  Welcome To My Slideshow :)
- <img class="mySlides" src="sheentpose.jpg">
- <img class="mySlides" src="sheenimage2.jpeg">
- <img class="mySlides" src="sheen3.jpg">
- <img class="mySlides" src="sheen4.jpg">
- <img class="mySlides" src="sheen5.webp">
- <img class="mySlides" src="sheen6.jpg">
 
- </body>
+  </body>
 
- </html>
+</html>
