--- a/excerise1.html
+++ b/excerise1.html
@@ -14,4 +14,6 @@ Enter Password:
 Re-Enter Password for Validation:
 <input type="password" id="secondPassword"><br>
 
-<input type="button" id="btnClick" value="Validate" onclick="validatePassword()"/>
+<button onclick="validatePassword()"> Validate </button>
+
+</html>
