Put the exercises in folders

--- a/exercise1/exercise1.html
+++ b/exercise1/exercise1.html
@@ -2,7 +2,7 @@
   <head>
     <title> Is My Password Valid? </title>
     <script type="text/javascript"
-                 src="excerise1.js">
+                 src="exercise1.js">
          </script>
   </head>
 
