Finished Exercise 2 and started Exercise 3

--- a/exercise2/SlideShow.html
+++ b/exercise2/SlideShow.html
@@ -4,16 +4,12 @@
       <script type="text/javascript"
                    src="SlideShow.js">
            </script>
-  <body>
+  <body align = "center">
+
   <h1> Hi! Welcome to my slide show :) </h1>
-  <img src="sheentpose.jpg">
-  <img src="sheenimage2.jpeg">
-  <img src="sheen3.jpg">
-  <img src="sheen4.jpg">
-  <img src="sheen5.webp">
-  <img src="sheen6.jpg">
-  <button onclick="validatePassword()">Previous</button>
-  <button onclick="validatePassword()">Next</button>
+  <button onclick="previous()">Previous</button>
+  <img src="images/sheentpose.jpg" id="currentimage" height="500" width="450">
+  <button onclick="next()">Next</button>
 
 
   </body>
