--- a/exercise3/portfolio.html
+++ b/exercise3/portfolio.html
@@ -9,9 +9,26 @@
     <body>
       <h1> Markus Becerra </h1>
       <br>
-          <img src="images/markus_becerra-1.jpg" height="300" width ="200">
+          <img src="images/markus_becerra-1.jpg" height="300" width ="200" class="portrat">
           <br>
-          <p> Hello! Im Markus Becerra </p>
+          <p> Hello! Im Markus Becerra. I'm a junior majoring in Computer Science at the
+          University of Kansas. I have a large interest in Software Engineering and music! I really hope to be able to combine both passions
+        at some point in my career. I'm the Technology Assistant Director at the student-led radio station, KJHK 90.7FM, and I'm the Web Chair
+      for Theta Tau, Zeta Chapter.  </p>
+
+      <h3> Links: </h3>
+      <ul>
+    <li>  <a href="https://www.linkedin.com/in/markus-becerra-1a5a8117b/"> LinkedIn </a> </li>
+    <li>   <a href="https://github.com/MarkusBecerra"> GitHub </a> </li>
+    <li>   <a href="https://www.youtube.com/channel/UCSFSrcG5YSyUIvoe9LG3xNg"> YouTube </a> </li>
+    <li>   <a href="https://open.spotify.com/user/markles1999?si=BuTrrdhdQs2D4XRxsIS8Fw"> Spotify </a> </li>
+      </ul>
+      <br>
+      <br>
+      <h4> This Video Is EPIC </h4>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/NZzXzymUgEg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
     </body>
 
     </html>
