--- a/exercise2/SlideShow.html
+++ b/exercise2/SlideShow.html
@@ -4,6 +4,7 @@
       <script type="text/javascript"
                    src="SlideShow.js">
            </script>
+         </head>
   <body align = "center">
 
   <h1> Hi! Welcome to my slide show :) </h1>
