Created Exercise 5 and edited Exercise 4

--- a/exercise4/main.html
+++ b/exercise4/main.html
@@ -4,6 +4,9 @@
     <script type="text/javascript"
                  src="script.js">
          </script>
+         <link href="myStyle.css"
+                 rel="stylesheet"
+                 type="text/css"/>
        </head>
 <body>
 <p id = "sampletext">
@@ -35,7 +38,7 @@ Green (0-255)
 Blue (0-255)
 <input type="number" id = "blue" min = "0" max = "250" value = "50"><br>
 Width
-<input type="number" id = "width" min = "0" max = "250" value = "2000" ><br>
+<input type="number" id = "width" min = "0" max = "250" value = "200" ><br>
 <br>
 
 <h4> Background Color </h4>
